Fix datagrid text overflow issue --1.10new feature change Signed-off-by: Yogi_Wang <yawang@vmware.com>

--- a/src/portal/src/app/project/scanner/scanner.component.scss
+++ b/src/portal/src/app/project/scanner/scanner.component.scss
@@ -21,7 +21,3 @@
 .clr-form-control {
   margin-top: 0.75rem !important;
 }
-.label-in-cell {
-  position: absolute;
-  margin-top: -3px;
-}
