--- a/src/portal/src/app/project/tag-retention/tag-retention.component.scss
+++ b/src/portal/src/app/project/tag-retention/tag-retention.component.scss
@@ -81,7 +81,7 @@
   flex: 0 0 8.3%;
   padding-left: 0.5rem;
 }
-::ng-deep {
+:host::ng-deep {
   .datagrid-row-flex {
     .datagrid-row-detail {
       .datagrid-cell {
